@@ -39,6 +39,8 @@ void yyerror(char *message)
 
 int yylex(void);
 extern int _16bit_core;
+extern gp_boolean _16packed_byte_acc;
+static gp_boolean _16packed_offset_labels;
 
 /************************************************************************/
 
@@ -424,7 +426,7 @@ line:
 		set_global($1, $2, PERMANENT, gvt_constant);
 		break;
 	      case insn:
-		set_global($1, $2 << _16bit_core, PERMANENT, gvt_address);
+		set_global($1, ($2 << _16bit_core) - _16packed_offset_labels, PERMANENT, gvt_address);
 		break;
 	      case res:
 		set_global($1, $2, PERMANENT, gvt_static);
@@ -870,6 +872,16 @@ label_concat:
 	LABEL
         { 
           $$ = $1;
+
+	  /*
+	   * statements return their org - but, with 16bit cores, org is a word
+	   * address. for us to know whether a label points at a non word aligned
+	   * address, we must get status from the directive.c module through a
+	   * back channel. however, we must make sure to store this status before
+	   * any statement on the current line is processed, so we must save it here
+	   * before the statement rules run.
+	   */
+	  _16packed_offset_labels = _16packed_byte_acc;
         }
         |
         VARLAB_BEGIN expr ')'
